--- a/notifications.html
+++ b/notifications.html
@@ -6,7 +6,6 @@
     <title>التنبيهات - Clinic Dashboard</title>
 
     <link rel="icon" href="/img/dummy-conan.jpeg" type="image/jpeg" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -31,7 +30,6 @@
 
       body.dark .notification-item {
         background: #2d2d2d;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
       }
 
       .notification-item:hover {
@@ -49,7 +47,6 @@
         justify-content: center;
         color: white;
         font-size: 20px;
-        flex-shrink: 0;
       }
 
       .notification-content {
@@ -60,7 +57,6 @@
         font-size: 18px;
         font-weight: bold;
         color: #1e1e1e;
-        margin-bottom: 5px;
       }
 
       body.dark .notification-name {
@@ -70,7 +66,6 @@
       .notification-details {
         font-size: 14px;
         color: #666;
-        margin-bottom: 3px;
       }
 
       body.dark .notification-details {
@@ -80,11 +75,6 @@
       .notification-time {
         font-size: 12px;
         color: #999;
-        margin-top: 8px;
-      }
-
-      body.dark .notification-time {
-        color: #888;
       }
 
       .notification-badge-small {
@@ -102,20 +92,6 @@
         border-radius: 12px;
         color: white;
         margin-bottom: 30px;
-        box-shadow: 0 4px 12px rgba(217, 70, 239, 0.3);
-      }
-
-      .notifications-header h2 {
-        margin: 0;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .notifications-header p {
-        margin: 10px 0 0 0;
-        opacity: 0.9;
       }
 
       .filter-buttons {
@@ -132,18 +108,7 @@
         background: #f0f0f0;
         color: #333;
         cursor: pointer;
-        font-size: 14px;
         transition: all 0.3s ease;
-      }
-
-      body.dark .filter-btn {
-        background: #3d3d3d;
-        color: #fff;
-      }
-
-      .filter-btn:hover {
-        background: #d946ef;
-        color: white;
       }
 
       .filter-btn.active {
@@ -159,7 +124,6 @@
 
       .empty-state i {
         font-size: 64px;
-        margin-bottom: 20px;
         opacity: 0.5;
       }
 
@@ -179,12 +143,6 @@
         border-radius: 8px;
         font-size: 14px;
         transition: border-color 0.3s ease;
-      }
-
-      body.dark .search-filter input {
-        background: #2d2d2d;
-        border-color: #444;
-        color: #fff;
       }
 
       .search-filter input:focus {
@@ -207,41 +165,26 @@
     </div>
 
     <div class="container">
-      <!-- SIDEBAR -->
       <aside class="sidebar" id="sidebar">
-        <div class="logo">
-          <span>CONAN DASHBOARD</span>
-        </div>
+        <div class="logo"><span>CONAN DASHBOARD</span></div>
         <nav class="menu">
-          <a href="dashboard.html">
-            <i class="fa-solid fa-gauge"></i>
-            لوحة القيادة
-          </a>
-
-          <a href="notifications.html" class="active">
-            <i class="fa-solid fa-bell"></i>
-            التنبيهات
-          </a>
-
-          <a href="analytics.html">
-            <i class="fa-solid fa-rocket"></i>
-            تحليلات
-          </a>
-          <a href="booking.html">
-            <i class="fa-solid fa-table"></i>
-            جدول الحجوزات
-          </a>
-
-          <a href="#">
-            <i class="fa-solid fa-user"></i>
-            ارسال رسالة جماعية
-          </a>
+          <a href="dashboard.html"
+            ><i class="fa-solid fa-gauge"></i> لوحة القيادة</a
+          >
+          <a href="notifications.html" class="active"
+            ><i class="fa-solid fa-bell"></i> التنبيهات</a
+          >
+          <a href="analytics.html"
+            ><i class="fa-solid fa-rocket"></i> تحليلات</a
+          >
+          <a href="booking.html"
+            ><i class="fa-solid fa-table"></i> جدول الحجوزات</a
+          >
+          <a href="#"><i class="fa-solid fa-user"></i> ارسال رسالة جماعية</a>
         </nav>
       </aside>
 
-      <!-- MAIN CONTENT -->
       <main class="main-content" id="dashboardContent" style="display: none">
-        <!-- HEADER -->
         <header class="header">
           <div class="header-left">
             <button class="menu-toggle icon-btn" id="menuToggle">
@@ -250,10 +193,6 @@
             <h1>التنبيهات</h1>
           </div>
           <div class="header-right">
-            <div class="search-box">
-              <input type="text" placeholder="اكتب هنا..." />
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
             <button class="icon-btn" id="themeToggle">
               <i class="fa-regular fa-moon"></i>
             </button>
@@ -263,13 +202,9 @@
           </div>
         </header>
 
-        <!-- NOTIFICATIONS CONTENT -->
         <div class="notifications-container">
           <div class="notifications-header">
-            <h2>
-              <i class="fa-solid fa-bell"></i>
-              إشعارات الحجوزات
-            </h2>
+            <h2><i class="fa-solid fa-bell"></i> إشعارات الحجوزات</h2>
             <p>جميع الحجوزات الجديدة والمواعيد القادمة</p>
           </div>
 
@@ -283,23 +218,24 @@
           </div>
 
           <div class="filter-buttons">
-            <button class="filter-btn active" onclick="filterByStatus('all')">
+            <button
+              class="filter-btn active"
+              onclick="filterByStatus(event,'all')"
+            >
               الكل
             </button>
-            <button class="filter-btn" onclick="filterByStatus('today')">
+            <button class="filter-btn" onclick="filterByStatus(event,'today')">
               اليوم
             </button>
-            <button class="filter-btn" onclick="filterByStatus('week')">
+            <button class="filter-btn" onclick="filterByStatus(event,'week')">
               هذا الأسبوع
             </button>
-            <button class="filter-btn" onclick="filterByStatus('month')">
+            <button class="filter-btn" onclick="filterByStatus(event,'month')">
               هذا الشهر
             </button>
           </div>
 
-          <div id="notificationsList">
-            <!-- Notifications will be loaded here -->
-          </div>
+          <div id="notificationsList"></div>
         </div>
 
         <footer>© 2025 Smile Clinic</footer>
@@ -338,10 +274,7 @@
 
       function logout() {
         localStorage.removeItem("clinic_logged_in");
-        document.getElementById("loginScreen").style.display = "flex";
-        document.getElementById("dashboardContent").style.display = "none";
-        document.getElementById("email").value = "";
-        document.getElementById("password").value = "";
+        location.reload();
       }
 
       if (localStorage.getItem("clinic_logged_in") === "true") {
@@ -358,7 +291,7 @@
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
+          allBookings = rawData.slice(1).reverse();
           filteredBookings = allBookings;
           renderNotifications();
         } catch (error) {
@@ -369,60 +302,45 @@
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
-        if (filteredBookings.length === 0) {
+        if (!filteredBookings || filteredBookings.length === 0) {
           container.innerHTML = `
             <div class="empty-state">
               <i class="fa-solid fa-bell-slash"></i>
               <h3>لا توجد إشعارات</h3>
               <p>لم يتم العثور على أي حجوزات</p>
-            </div>
-          `;
+            </div>`;
           return;
         }
 
         container.innerHTML = filteredBookings
-          .map((booking) => {
-            const timeAgo = getTimeAgo(booking.timestamp);
-            return `
-            <div class="notification-item">
-              <div class="notification-icon">
-                <i class="fa-solid fa-user-plus"></i>
-              </div>
-              <div class="notification-content">
-                <div class="notification-name">${
-                  booking.name || "غير محدد"
-                }</div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-phone"></i> ${
-                    booking.phone || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-stethoscope"></i> ${
-                    booking.service || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-calendar"></i> ${
-                    booking.appointment || "غير محدد"
-                  }
-                </div>
-                <div class="notification-time">
-                  <i class="fa-solid fa-clock"></i> ${timeAgo}
-                </div>
-              </div>
-              <div>
-                <span class="notification-badge-small">جديد</span>
-              </div>
+          .map(
+            (booking) => `
+          <div class="notification-item">
+            <div class="notification-icon"><i class="fa-solid fa-user-plus"></i></div>
+            <div class="notification-content">
+              <div class="notification-name">${booking.name || "غير محدد"}</div>
+              <div class="notification-details"><i class="fa-solid fa-phone"></i> ${
+                booking.phone || "غير محدد"
+              }</div>
+              <div class="notification-details"><i class="fa-solid fa-stethoscope"></i> ${
+                booking.service || "غير محدد"
+              }</div>
+              <div class="notification-details"><i class="fa-solid fa-calendar"></i> ${
+                booking.appointment || "غير محدد"
+              }</div>
+              <div class="notification-time"><i class="fa-solid fa-clock"></i> ${getTimeAgo(
+                booking.timestamp
+              )}</div>
             </div>
-          `;
-          })
+            <div><span class="notification-badge-small">جديد</span></div>
+          </div>
+        `
+          )
           .join("");
       }
 
       function getTimeAgo(timestamp) {
         if (!timestamp) return "غير محدد";
-
         const now = new Date();
         const bookingDate = new Date(timestamp);
         const diffMs = now - bookingDate;
@@ -434,128 +352,78 @@
         if (diffMins < 60) return `منذ ${diffMins} دقيقة`;
         if (diffHours < 24) return `منذ ${diffHours} ساعة`;
         if (diffDays < 7) return `منذ ${diffDays} يوم`;
-
         return bookingDate.toLocaleDateString("ar-EG");
       }
 
-      function filterByStatus(status) {
+      // ✅ FIXED FILTER FUNCTION (works with UTC timestamps)
+      function filterByStatus(e, status) {
         currentFilter = status;
 
-        // Update active button styles
         document
           .querySelectorAll(".filter-btn")
-          .forEach((btn) => btn.classList.remove("active"));
-        event.target.classList.add("active");
+          .forEach((b) => b.classList.remove("active"));
+        e.target.classList.add("active");
 
         const now = new Date();
-
-        // Normalize to local midnight for accurate day/week comparison
-        const startOfToday = new Date(
+        const today = new Date(
           now.getFullYear(),
           now.getMonth(),
           now.getDate()
         );
-        const endOfToday = new Date(startOfToday);
-        endOfToday.setDate(endOfToday.getDate() + 1);
+        const tomorrow = new Date(today);
+        tomorrow.setDate(today.getDate() + 1);
 
-        // Start of current week (Sunday-based)
-        const startOfWeek = new Date(startOfToday);
-        startOfWeek.setDate(startOfWeek.getDate() - startOfWeek.getDay());
+        const startOfWeek = new Date(today);
+        startOfWeek.setDate(today.getDate() - today.getDay());
         const endOfWeek = new Date(startOfWeek);
-        endOfWeek.setDate(endOfWeek.getDate() + 7);
+        endOfWeek.setDate(startOfWeek.getDate() + 7);
 
-        // Start and end of current month
         const startOfMonth = new Date(now.getFullYear(), now.getMonth(), 1);
         const endOfMonth = new Date(now.getFullYear(), now.getMonth() + 1, 1);
 
         filteredBookings = allBookings.filter((b) => {
           if (!b.timestamp) return false;
-
-          // Parse ISO timestamp from Google Sheets
           const bookingDate = new Date(b.timestamp);
+          const localDate = new Date(
+            bookingDate.getTime() - bookingDate.getTimezoneOffset() * 60000
+          );
 
-          if (status === "today") {
-            return bookingDate >= startOfToday && bookingDate < endOfToday;
-          }
+          if (status === "today")
+            return localDate >= today && localDate < tomorrow;
 
-          if (status === "week") {
-            return bookingDate >= startOfWeek && bookingDate < endOfWeek;
-          }
+          if (status === "week")
+            return localDate >= startOfWeek && localDate < endOfWeek;
 
-          if (status === "month") {
-            return bookingDate >= startOfMonth && bookingDate < endOfMonth;
-          }
+          if (status === "month")
+            return localDate >= startOfMonth && localDate < endOfMonth;
 
-          return true; // show all if 'all' filter
+          return true;
         });
 
         renderNotifications();
       }
 
       function filterNotifications() {
-        const searchTerm = document
-          .getElementById("searchInput")
-          .value.toLowerCase();
-
-        if (searchTerm === "") {
-          filterByStatus(currentFilter);
+        const term = document.getElementById("searchInput").value.toLowerCase();
+        if (!term) {
+          filterByStatus(
+            { target: document.querySelector(`.filter-btn.active`) },
+            currentFilter
+          );
           return;
         }
-
-        filteredBookings = allBookings.filter((booking) => {
-          return (
-            (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
-            (booking.service &&
-              booking.service.toLowerCase().includes(searchTerm)) ||
-            (booking.phone && booking.phone.includes(searchTerm))
-          );
-        });
-
+        filteredBookings = allBookings.filter(
+          (b) =>
+            (b.name && b.name.toLowerCase().includes(term)) ||
+            (b.service && b.service.toLowerCase().includes(term)) ||
+            (b.phone && b.phone.includes(term))
+        );
         renderNotifications();
       }
 
-      // Theme toggle
-      const themeToggle = document.getElementById("themeToggle");
-      themeToggle.addEventListener("click", function () {
-        document.body.classList.toggle("dark");
-        const icon = themeToggle.querySelector("i");
-        if (document.body.classList.contains("dark")) {
-          icon.classList.replace("fa-moon", "fa-sun");
-          localStorage.setItem("clinic_theme", "dark");
-        } else {
-          icon.classList.replace("fa-sun", "fa-moon");
-          localStorage.setItem("clinic_theme", "light");
-        }
-      });
-
-      if (localStorage.getItem("clinic_theme") === "dark") {
-        document.body.classList.add("dark");
-        const icon = themeToggle.querySelector("i");
-        icon.classList.replace("fa-moon", "fa-sun");
-      }
-
-      // Menu toggle
-      const menuToggle = document.getElementById("menuToggle");
-      const sidebar = document.getElementById("sidebar");
-      menuToggle.addEventListener("click", () =>
-        sidebar.classList.toggle("active")
-      );
-
-      document.addEventListener("click", (e) => {
-        if (
-          window.innerWidth <= 768 &&
-          sidebar.classList.contains("active") &&
-          !sidebar.contains(e.target) &&
-          e.target !== menuToggle
-        ) {
-          sidebar.classList.remove("active");
-        }
-      });
-
-      // Auto-load and refresh
       if (localStorage.getItem("clinic_logged_in") === "true") {
         loadNotifications();
-        setInterval(loadNotifications, 30000); // Refresh every 30 seconds
+        setInterval(loadNotifications, 30000);
       }
     </script>
   </body>
