--- a/notifications.html
+++ b/notifications.html
@@ -251,7 +251,12 @@
           </div>
           <div class="header-right">
             <div class="search-box">
-              <input type="text" placeholder="اكتب هنا..." />
+              <input
+                type="text"
+                placeholder="اكتب هنا..."
+                id="searchInput"
+                onkeyup="filterNotifications()"
+              />
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <button class="icon-btn" id="themeToggle">
@@ -273,29 +278,20 @@
             <p>جميع الحجوزات الجديدة والمواعيد القادمة</p>
           </div>
 
-          <div class="search-filter">
-            <input
-              type="text"
-              id="searchInput"
-              placeholder="🔍 ابحث عن اسم المريض أو الخدمة..."
-              onkeyup="filterNotifications()"
-            />
-          </div>
-
           <div class="filter-buttons">
             <button
               class="filter-btn active"
-              onclick="filterByStatus('all', this)"
+              onclick="filterByStatus('all', event)"
             >
               الكل
             </button>
-            <button class="filter-btn" onclick="filterByStatus('today', this)">
+            <button class="filter-btn" onclick="filterByStatus('today', event)">
               اليوم
             </button>
-            <button class="filter-btn" onclick="filterByStatus('week', this)">
+            <button class="filter-btn" onclick="filterByStatus('week', event)">
               هذا الأسبوع
             </button>
-            <button class="filter-btn" onclick="filterByStatus('month', this)">
+            <button class="filter-btn" onclick="filterByStatus('month', event)">
               هذا الشهر
             </button>
           </div>
@@ -352,313 +348,165 @@
         document.getElementById("dashboardContent").style.display = "block";
       }
 
-      // ======= NOTIFICATIONS LOGIC (ROBUST, WITH AUTO-DETECT TIMESTAMP) =======
+      // ======= NOTIFICATIONS LOGIC =======
       let allBookings = [];
       let filteredBookings = [];
       let currentFilter = "all";
 
-      // Candidate fields to try for the row timestamp (order matters)
-      const TIMESTAMP_FIELDS = [
-        "timestamp",
-        "Timestamp",
-        "createdAt",
-        "created_at",
-        "CreatedAt",
-        "Created_at",
-        "datetime",
-        "dateTime",
-        "DateTime",
-        "date",
-        "Date",
-        "time",
-        "Time",
-        "appointment_time",
-        "appointmentTime",
-        "AppointmentTime",
-        "created",
-        "Created",
-      ];
-
-      // Parse any reasonable date format, including Excel serials
-      function parseDateSafe(value) {
-        if (value === null || value === undefined || value === "") return null;
-        if (value instanceof Date) return isNaN(value) ? null : value;
-
-        // numeric? could be epoch ms or Excel serial
-        if (!isNaN(value)) {
-          const num = Number(value);
-          // epoch ms heuristic
-          if (num > 1e10) {
-            const dMs = new Date(num);
-            return isNaN(dMs) ? null : dMs;
-          }
-          // Excel serial (days since 1899-12-30) or seconds
-          const excelEpoch = Date.UTC(1899, 11, 30); // 1899-12-30
-          const dExcel = new Date(excelEpoch + num * 86400000);
-          if (!isNaN(dExcel)) return dExcel;
-        }
-
-        // try direct
-        const d = new Date(String(value));
-        return isNaN(d) ? null : d;
-      }
-
-      // Pick the first field on the object that parses to a valid date
-      function getRowDate(obj) {
-        for (const key of TIMESTAMP_FIELDS) {
-          if (key in obj) {
-            const d = parseDateSafe(obj[key]);
-            if (d) return d;
-          }
-        }
-        // fallback: if there's literally a 'timestamp' nested in meta etc., try common spots
-        if (obj?.meta?.timestamp) {
-          const d = parseDateSafe(obj.meta.timestamp);
-          if (d) return d;
-        }
-        return null;
-      }
-
-      // Utility ranges
-      function startOfToday() {
-        const now = new Date();
-        return new Date(now.getFullYear(), now.getMonth(), now.getDate());
-      }
-      function daysAgo(n) {
-        const now = new Date();
-        return new Date(now.getTime() - n * 24 * 60 * 60 * 1000);
-      }
-
-      // Load data
       async function loadNotifications() {
         try {
           const res = await fetch("/api/bookings");
-          const raw = await res.json();
-
-          // If the first row is header (arrays of strings), skip it
-          let rows = Array.isArray(raw) ? raw : [];
-          if (
-            rows.length &&
-            typeof rows[0] === "object" &&
-            !Array.isArray(rows[0])
-          ) {
-            // objects -> good
-          } else if (rows.length && Array.isArray(rows[0])) {
-            // sheet-like arrays -> drop header row
-            rows = rows.slice(1);
-          }
-
-          // Normalize to objects (if they already are, leave them)
-          const asObjects = rows.map((r) => r);
-
-          // Attach parsed date to each row as _ts
-          allBookings = asObjects.map((r) => ({
-            ...r,
-            _ts: getRowDate(r),
-          }));
-
-          // Sort newest first but keep rows without dates at bottom
-          allBookings.sort((a, b) => {
-            const at = a._ts ? a._ts.getTime() : -Infinity;
-            const bt = b._ts ? b._ts.getTime() : -Infinity;
-            return bt - at;
-          });
-
-          filteredBookings = [...allBookings];
+          const rawData = await res.json();
+          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
+          filteredBookings = allBookings;
           renderNotifications();
-          updateCountBadge();
-        } catch (err) {
-          console.error("Error loading notifications:", err);
+        } catch (error) {
+          console.error("Error loading notifications:", error);
         }
       }
 
-      // Render UI
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
-        if (!filteredBookings || filteredBookings.length === 0) {
+        if (filteredBookings.length === 0) {
           container.innerHTML = `
-      <div class="empty-state">
-        <i class="fa-solid fa-bell-slash"></i>
-        <h3>لا توجد إشعارات</h3>
-        <p>لم يتم العثور على أي حجوزات</p>
-      </div>
-    `;
+            <div class="empty-state">
+              <i class="fa-solid fa-bell-slash"></i>
+              <h3>لا توجد إشعارات</h3>
+              <p>لم يتم العثور على أي حجوزات</p>
+            </div>
+          `;
           return;
         }
 
         container.innerHTML = filteredBookings
-          .map((b) => {
-            const timeAgo = getTimeAgo(b._ts);
+          .map((booking) => {
+            const timeAgo = getTimeAgo(booking.timestamp);
             return `
-        <div class="notification-item">
-          <div class="notification-icon">
-            <i class="fa-solid fa-user-plus"></i>
-          </div>
-          <div class="notification-content">
-            <div class="notification-name">${b.name || "غير محدد"}</div>
-            <div class="notification-details">
-              <i class="fa-solid fa-phone"></i> ${b.phone || "غير محدد"}
+            <div class="notification-item">
+              <div class="notification-icon">
+                <i class="fa-solid fa-user-plus"></i>
+              </div>
+              <div class="notification-content">
+                <div class="notification-name">${
+                  booking.name || "غير محدد"
+                }</div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-phone"></i> ${
+                    booking.phone || "غير محدد"
+                  }
+                </div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-stethoscope"></i> ${
+                    booking.service || "غير محدد"
+                  }
+                </div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-calendar"></i> ${
+                    booking.appointment || "غير محدد"
+                  }
+                </div>
+                <div class="notification-time">
+                  <i class="fa-solid fa-clock"></i> ${timeAgo}
+                </div>
+              </div>
+              <div>
+                <span class="notification-badge-small">جديد</span>
+              </div>
             </div>
-            <div class="notification-details">
-              <i class="fa-solid fa-stethoscope"></i> ${b.service || "غير محدد"}
-            </div>
-            <div class="notification-details">
-              <i class="fa-solid fa-calendar"></i> ${
-                b.appointment || "غير محدد"
-              }
-            </div>
-            <div class="notification-time">
-              <i class="fa-solid fa-clock"></i> ${timeAgo}
-            </div>
-          </div>
-        </div>
-      `;
+          `;
           })
           .join("");
       }
 
-      // Time ago (Arabic)
-      function getTimeAgo(dateObj) {
-        if (!(dateObj instanceof Date) || isNaN(dateObj)) return "غير محدد";
+      function getTimeAgo(timestamp) {
+        if (!timestamp) return "غير محدد";
+
         const now = new Date();
-        const diffMs = now - dateObj;
-        const mins = Math.floor(diffMs / 60000);
-        const hrs = Math.floor(diffMs / 3600000);
-        const days = Math.floor(diffMs / 86400000);
+        const bookingDate = new Date(timestamp);
+        const diffMs = now - bookingDate;
+        const diffMins = Math.floor(diffMs / 60000);
+        const diffHours = Math.floor(diffMs / 3600000);
+        const diffDays = Math.floor(diffMs / 86400000);
 
-        if (mins < 1) return "الآن";
-        if (mins < 60) return `منذ ${mins} دقيقة`;
-        if (hrs < 24) return `منذ ${hrs} ساعة`;
-        if (days < 7) return `منذ ${days} يوم`;
+        if (diffMins < 1) return "الآن";
+        if (diffMins < 60) return `منذ ${diffMins} دقيقة`;
+        if (diffHours < 24) return `منذ ${diffHours} ساعة`;
+        if (diffDays < 7) return `منذ ${diffDays} يوم`;
 
-        try {
-          return new Intl.DateTimeFormat("ar-EG", {
-            year: "numeric",
-            month: "2-digit",
-            day: "2-digit",
-            hour: "2-digit",
-            minute: "2-digit",
-          }).format(dateObj);
-        } catch {
-          return dateObj.toLocaleString("ar-EG");
-        }
+        return bookingDate.toLocaleDateString("ar-EG");
       }
 
-      // Update count badge (optional small helper)
-      function updateCountBadge() {
-        // If you want to show counts somewhere, e.g., in the header
-        // Example: <h2>إشعارات الحجوزات <span id="countBadge"></span></h2>
-        const el = document.getElementById("countBadge");
-        if (el) el.textContent = `(${filteredBookings.length})`;
-      }
-
-      // MAIN filter by time
-      function filterByStatus(status) {
+      function filterByStatus(status, event) {
         currentFilter = status;
 
-        document
-          .querySelectorAll(".filter-btn")
-          .forEach((b) => b.classList.remove("active"));
-        const btnIndex =
-          status === "all"
-            ? 0
-            : status === "today"
-            ? 1
-            : status === "week"
-            ? 2
-            : status === "month"
-            ? 3
-            : -1;
-        if (btnIndex >= 0) {
-          const btns = document.querySelectorAll(".filter-btn");
-          if (btns[btnIndex]) btns[btnIndex].classList.add("active");
-        }
+        // Update active button
+        document.querySelectorAll(".filter-btn").forEach((btn) => {
+          btn.classList.remove("active");
+        });
+        if (event && event.target) event.target.classList.add("active");
 
-        let base = [...allBookings];
+        const now = new Date();
+        const todayStart = new Date(
+          now.getFullYear(),
+          now.getMonth(),
+          now.getDate()
+        );
+        const tomorrowStart = new Date(todayStart);
+        tomorrowStart.setDate(todayStart.getDate() + 1);
 
-        if (status !== "all") {
-          const now = new Date();
-          const oneDayAgo = new Date(now.getTime() - 24 * 60 * 60 * 1000);
-          const weekAgo = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
-          const monthAgo = new Date(now.getTime() - 30 * 24 * 60 * 60 * 1000);
+        const weekAgo = new Date(
+          todayStart.getTime() - 7 * 24 * 60 * 60 * 1000
+        );
+        const monthAgo = new Date(
+          todayStart.getTime() - 30 * 24 * 60 * 60 * 1000
+        );
 
-          base = base.filter((b) => {
-            const d = b._ts;
-            if (!(d instanceof Date) || isNaN(d)) return false;
-            if (status === "today") return d >= oneDayAgo; // last 24 hours
-            if (status === "week") return d >= weekAgo;
-            if (status === "month") return d >= monthAgo;
-            return true;
+        if (status === "all") {
+          filteredBookings = allBookings;
+        } else if (status === "today") {
+          filteredBookings = allBookings.filter((b) => {
+            if (!b.timestamp) return false;
+            const bookingDate = new Date(b.timestamp);
+            return bookingDate >= todayStart && bookingDate < tomorrowStart;
+          });
+        } else if (status === "week") {
+          filteredBookings = allBookings.filter((b) => {
+            if (!b.timestamp) return false;
+            const bookingDate = new Date(b.timestamp);
+            return bookingDate >= weekAgo && bookingDate < tomorrowStart;
+          });
+        } else if (status === "month") {
+          filteredBookings = allBookings.filter((b) => {
+            if (!b.timestamp) return false;
+            const bookingDate = new Date(b.timestamp);
+            return bookingDate >= monthAgo && bookingDate < tomorrowStart;
           });
         }
 
-        base.sort((a, b) => {
-          const at = a._ts ? a._ts.getTime() : -Infinity;
-          const bt = b._ts ? b._ts.getTime() : -Infinity;
-          return bt - at;
-        });
-
-        filteredBookings = base;
         renderNotifications();
-        updateCountBadge && updateCountBadge();
       }
 
-      // keep newest first
-      base.sort((a, b) => {
-        const at = a._ts ? a._ts.getTime() : -Infinity;
-        const bt = b._ts ? b._ts.getTime() : -Infinity;
-        return bt - at;
-      });
-
-      filteredBookings = base;
-      renderNotifications();
-      updateCountBadge();
-
-      // Search that respects currentFilter
       function filterNotifications() {
-        const q = (document.getElementById("searchInput").value || "")
-          .toLowerCase()
-          .trim();
+        const searchTerm = document
+          .getElementById("searchInput")
+          .value.toLowerCase();
 
-        // Start from the date-filtered set
-        let base;
-        if (currentFilter === "all") {
-          base = [...allBookings];
-        } else {
-          const today = startOfToday();
-          const weekAgo = daysAgo(7);
-          const monthAgo = daysAgo(30);
-
-          base = allBookings.filter((b) => {
-            const d = b._ts;
-            if (!(d instanceof Date) || isNaN(d)) return false;
-            if (currentFilter === "today") return d >= today;
-            if (currentFilter === "week") return d >= weekAgo;
-            if (currentFilter === "month") return d >= monthAgo;
-            return true;
-          });
+        if (searchTerm === "") {
+          filterByStatus(currentFilter);
+          return;
         }
 
-        if (q) {
-          base = base.filter((b) => {
-            const name = (b.name || "").toLowerCase();
-            const service = (b.service || "").toLowerCase();
-            const phone = b.phone || "";
-            return name.includes(q) || service.includes(q) || phone.includes(q);
-          });
-        }
-
-        // Sort newest first
-        base.sort((a, b) => {
-          const at = a._ts ? a._ts.getTime() : -Infinity;
-          const bt = b._ts ? b._ts.getTime() : -Infinity;
-          return bt - at;
+        filteredBookings = allBookings.filter((booking) => {
+          return (
+            (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
+            (booking.service &&
+              booking.service.toLowerCase().includes(searchTerm)) ||
+            (booking.phone && booking.phone.includes(searchTerm))
+          );
         });
 
-        filteredBookings = base;
         renderNotifications();
-        updateCountBadge();
       }
 
       // Theme toggle
